<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightSky">

    <include layout="@layout/include_title_back"></include>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/y19px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/x48px"
        android:paddingTop="@dimen/y29px"
        android:paddingBottom="@dimen/y29px"
        android:background="@color/first_white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/father_name"
                android:layout_centerVertical="true"
                style="@style/SecondBlack.Text28px"
                />
            <TextView
                android:id="@+id/tv_father_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x313px"
                style="@style/SecondBlue.Text24px"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/y15px">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/culture"
                android:layout_centerVertical="true"
                style="@style/SecondBlack.Text28px"
                />
            <TextView
                android:id="@+id/tv_father_culture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x313px"
                style="@style/SecondBlue.Text24px"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/y15px">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/father_height"
                android:layout_centerVertical="true"
                style="@style/SecondBlack.Text28px"
                />
            <TextView
                android:id="@+id/tv_father_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x313px"
                style="@style/SecondBlue.Text24px"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/y15px">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/father_weight"
                android:layout_centerVertical="true"
                style="@style/SecondBlack.Text28px"
                />
            <TextView
                android:id="@+id/tv_father_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x313px"
                style="@style/SecondBlue.Text24px"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/y15px">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/father_BMI"
                android:layout_centerVertical="true"
                style="@style/SecondBlack.Text28px"
                />
            <TextView
                android:id="@+id/tv_father_BMI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x313px"
                style="@style/SecondBlue.Text24px"
                />
        </RelativeLayout>

    </LinearLayout>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/y19px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/x48px"
        android:paddingTop="@dimen/y29px"
        android:paddingBottom="@dimen/y29px"
        android:background="@color/first_white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mother_name"
                android:layout_centerVertical="true"
                style="@style/SecondBlack.Text28px"
                />
            <TextView
                android:id="@+id/tv_mother_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x313px"
                style="@style/SecondBlue.Text24px"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/y15px">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/culture"
                android:layout_centerVertical="true"
                style="@style/SecondBlack.Text28px"
                />
            <TextView
                android:id="@+id/tv_mother_culture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x313px"
                style="@style/SecondBlue.Text24px"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/y15px">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mother_height"
                android:layout_centerVertical="true"
                style="@style/SecondBlack.Text28px"
                />
            <TextView
                android:id="@+id/tv_mother_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x313px"
                style="@style/SecondBlue.Text24px"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/y15px">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mother_weight"
                android:layout_centerVertical="true"
                style="@style/SecondBlack.Text28px"
                />
            <TextView
                android:id="@+id/tv_mother_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x313px"
                style="@style/SecondBlue.Text24px"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/y15px">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mother_BMI"
                android:layout_centerVertical="true"
                style="@style/SecondBlack.Text28px"
                />
            <TextView
                android:id="@+id/tv_mother_BMI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x313px"
                style="@style/SecondBlue.Text24px"
                />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>